# vfu-dist

./: .gitignore  AUTHORS  COMPILE.NOTES  CONFIG  FAQ  HISTORY  INSTALL  Makefile  Makefile.am  Makefile.in  NOTES  README  README.DOS  README.MAC_OSX  THANKS.TO  TODO  XWINDOW.NOTES  aclocal.m4  build  build.docs  build.netbsd  build.sh  config.in  configure  configure.ac  install  makefile  mm.conf  vfu-3.03.lsm  vfu-get-latest-git-snapshot.pl  vfu.1  vfu.conf  vfu.html  vfu.lsm  vfu.pod  vfu.wiki
.github/workflows/: c-cpp.yml
extra/: README  Xdefaults  vfu-bash
extra/terminfo/: README
rx/: README  rx_auto  rx_deb  rx_ftp  rx_rar  rx_rpm  rx_tar  rx_zip  rxx
yas-libs/: Makefile.am  Makefile.in
